Configure environment variables: Add .env.example and ignore .env for security

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,18 @@
 # MCP Server Environment Variables
-# Copy this file to .env and fill in your values
+# Copy this file to .env and add your actual API keys
+# The .env file is gitignored and will not be committed to the repository
 
 # AI Service Type (default service to use)
 # Options: "claude", "openai", or "mock"
-AI_SERVICE_TYPE=claude
+AI_SERVICE_TYPE=mock  # Set to "mock" by default for safety
 
 # Note: You can configure multiple services at once
 # The server will use AI_SERVICE_TYPE as the default
 # but can dynamically choose any configured service on a per-request basis
 
-# API Keys
-ANTHROPIC_API_KEY=your_claude_api_key_here
-OPENAI_API_KEY=your_openai_api_key_here
+# API Keys - Add your real keys to .env (not .env.example)
+ANTHROPIC_API_KEY=your_claude_api_key_here  # Replace in your .env file
+OPENAI_API_KEY=your_openai_api_key_here     # Replace in your .env file
 
 # Server Configuration
 MCP_SERVER_NAME=ai-mcp-server
