Add support for multiple simultaneous transports using comma-separated list

--- a/.env.example
+++ b/.env.example
@@ -19,7 +19,11 @@ MCP_SERVER_NAME=ai-mcp-server
 MCP_SERVER_VERSION=1.0.0
 
 # Transport Settings
-# Options: "stdio", "tcp", or "websocket"
+# Options: "stdio", "tcp", or "websocket" (comma-separated for multiple)
+# Examples:
+#   MCP_TRANSPORT_TYPE=stdio              # Single transport
+#   MCP_TRANSPORT_TYPE=tcp,websocket      # Multiple transports
+#   MCP_TRANSPORT_TYPE=tcp,websocket,stdio # All transports
 MCP_TRANSPORT_TYPE=stdio
 
 # TCP Settings
