Add secrets manager and key rotation

--- a/.env.example
+++ b/.env.example
@@ -45,3 +45,10 @@ CLAUDE_DEFAULT_TEMPERATURE=0.7
 OPENAI_DEFAULT_MODEL=gpt-4o
 OPENAI_DEFAULT_MAX_TOKENS=1024
 OPENAI_DEFAULT_TEMPERATURE=0.7
+
+# Optional secrets file path
+SECRETS_FILE=secrets.json
+
+# Qdrant settings
+QDRANT_URL=
+QDRANT_API_KEY=
