all the external infrastructure is working as expected

--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,9 @@
 # The .env file is gitignored and will not be committed to the repository
 
 # AI Service Type (default service to use)
-# Options: "claude", "openai", or "mock"
-AI_SERVICE_TYPE=mock  # Set to "mock" by default for safety
+# Options: "claude", "openai", "ollama", or "mock"
+AI_SERVICE_TYPE=ollama  # Set to "ollama" by default for local embeddings
+=======
 
 # Note: You can configure multiple services at once
 # The server will use AI_SERVICE_TYPE as the default
@@ -45,6 +46,11 @@ CLAUDE_DEFAULT_TEMPERATURE=0.7
 OPENAI_DEFAULT_MODEL=gpt-4o
 OPENAI_DEFAULT_MAX_TOKENS=1024
 OPENAI_DEFAULT_TEMPERATURE=0.7
+
+# Ollama Settings
+OLLAMA_URL=http://localhost:5656
+OLLAMA_MODEL=nomic-embed-text
+# Other recommended models: all-minilm-l6-v2, e5-small, etc.
 
 # Optional secrets file path
 SECRETS_FILE=secrets.json
